css: Fix margins for basic buttons
The use of Gizmos means that :not(:only-child) does not work
for us.

Fixes an issue of misaligned margins for basic buttons.

--- a/src/ui/calculator.css
+++ b/src/ui/calculator.css
@@ -61,11 +61,11 @@ clamp > grid.small > :first-child {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
-.math-buttons.unfolded > grid:not(:only-child):first-child {
+.math-buttons.unfolded:not(.basic-buttons) > grid:first-child {
   margin-right: 6px;
 }
 
-.math-buttons.unfolded > grid:not(:only-child):last-child {
+.math-buttons.unfolded:not(.basic-buttons) > grid:last-child {
   margin-left: 6px;
 }
 
